[tool.poetry]
name = "FamilyMenu"
version = "0.1.0"
description = "A meal planning helper."
authors = ["Nathaniel Jones <nathaniel.j.jones@wsu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
questionary = {git = "https://github.com/n8jhj/questionary.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
